ensure image covers full view

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ main {
   width: 100%;
   height: 100%;
   border-radius: 1vw;
+  object-fit: cover;
 }
 
 button.control {
